vezba04/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body

    6 type: _TYPE

    7 parameter: %empty
    8          | type _ID

    9 body: _LBRACKET variable_list statement_list _RBRACKET

   10 variable_list: %empty
   11              | variable_list variable

   12 variable: type _ID _SEMICOLON

   13 statement_list: %empty
   14               | statement_list statement

   15 statement: compound_statement
   16          | assignment_statement
   17          | if_statement
   18          | return_statement

   19 compound_statement: _LBRACKET statement_list _RBRACKET

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   21 num_exp: exp
   22        | num_exp _AROP exp

   23 exp: literal
   24    | _ID
   25    | function_call
   26    | _LPAREN num_exp _RPAREN

   27 literal: _INT_NUMBER
   28        | _UINT_NUMBER

   29 $@2: %empty

   30 function_call: _ID $@2 _LPAREN argument _RPAREN

   31 argument: %empty
   32         | num_exp

   33 if_statement: if_part
   34             | if_part _ELSE statement

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement

   36 rel_exp: num_exp _RELOP num_exp

   37 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 6
_IF (259) 35
_ELSE (260) 34
_RETURN (261) 37
_ID (262) 5 8 12 20 24 30
_INT_NUMBER (263) 27
_UINT_NUMBER (264) 28
_LPAREN (265) 5 26 30 35
_RPAREN (266) 5 26 30 35
_LBRACKET (267) 9 19
_RBRACKET (268) 9 19
_ASSIGN (269) 20
_SEMICOLON (270) 12 20 37
_AROP (271) 22
_RELOP (272) 36
ONLY_IF (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
function_list (21)
    on left: 2 3, on right: 1 3
function (22)
    on left: 5, on right: 2 3
$@1 (23)
    on left: 4, on right: 5
type (24)
    on left: 6, on right: 5 8 12
parameter (25)
    on left: 7 8, on right: 5
body (26)
    on left: 9, on right: 5
variable_list (27)
    on left: 10 11, on right: 9 11
variable (28)
    on left: 12, on right: 11
statement_list (29)
    on left: 13 14, on right: 9 14 19
statement (30)
    on left: 15 16 17 18, on right: 14 34 35
compound_statement (31)
    on left: 19, on right: 15
assignment_statement (32)
    on left: 20, on right: 16
num_exp (33)
    on left: 21 22, on right: 20 22 26 32 36 37
exp (34)
    on left: 23 24 25 26, on right: 21 22
literal (35)
    on left: 27 28, on right: 23
function_call (36)
    on left: 30, on right: 25
$@2 (37)
    on left: 29, on right: 30
argument (38)
    on left: 31 32, on right: 30
if_statement (39)
    on left: 33 34, on right: 17
if_part (40)
    on left: 35, on right: 33 34
rel_exp (41)
    on left: 36, on right: 35
return_statement (42)
    on left: 37, on right: 18


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    6 type: _TYPE .

    $default  reduce using rule 6 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    5 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 10


State 10

    5 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 7 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    8 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    5 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 14


State 13

    8 parameter: type _ID .

    $default  reduce using rule 8 (parameter)


State 14

    5 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 15

    body  go to state 16


State 15

    9 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 17


State 16

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 17

    9 body: _LBRACKET variable_list . statement_list _RBRACKET
   11 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 13 (statement_list)

    type            go to state 18
    variable        go to state 19
    statement_list  go to state 20


State 18

   12 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 21


State 19

   11 variable_list: variable_list variable .

    $default  reduce using rule 11 (variable_list)


State 20

    9 body: _LBRACKET variable_list statement_list . _RBRACKET
   14 statement_list: statement_list . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 26

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 21

   12 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 33


State 22

   35 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 34


State 23

   37 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    num_exp        go to state 39
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42


State 24

   20 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 43


State 25

   19 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 44


State 26

    9 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 9 (body)


State 27

   14 statement_list: statement_list statement .

    $default  reduce using rule 14 (statement_list)


State 28

   15 statement: compound_statement .

    $default  reduce using rule 15 (statement)


State 29

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 30

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 31

   33 if_statement: if_part .
   34             | if_part . _ELSE statement

    _ELSE  shift, and go to state 45

    $default  reduce using rule 33 (if_statement)


State 32

   18 statement: return_statement .

    $default  reduce using rule 18 (statement)


State 33

   12 variable: type _ID _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 34

   35 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    num_exp        go to state 46
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42
    rel_exp        go to state 47


State 35

   24 exp: _ID .
   30 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 29 ($@2)
    $default  reduce using rule 24 (exp)

    $@2  go to state 48


State 36

   27 literal: _INT_NUMBER .

    $default  reduce using rule 27 (literal)


State 37

   28 literal: _UINT_NUMBER .

    $default  reduce using rule 28 (literal)


State 38

   26 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    num_exp        go to state 49
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42


State 39

   22 num_exp: num_exp . _AROP exp
   37 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 50
    _AROP       shift, and go to state 51


State 40

   21 num_exp: exp .

    $default  reduce using rule 21 (num_exp)


State 41

   23 exp: literal .

    $default  reduce using rule 23 (exp)


State 42

   25 exp: function_call .

    $default  reduce using rule 25 (exp)


State 43

   20 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    num_exp        go to state 52
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42


State 44

   14 statement_list: statement_list . statement
   19 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25
    _RBRACKET  shift, and go to state 53

    statement             go to state 27
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 45

   34 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 54
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 46

   22 num_exp: num_exp . _AROP exp
   36 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 51
    _RELOP  shift, and go to state 55


State 47

   35 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 56


State 48

   30 function_call: _ID $@2 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 57


State 49

   22 num_exp: num_exp . _AROP exp
   26 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 58
    _AROP    shift, and go to state 51


State 50

   37 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 37 (return_statement)


State 51

   22 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    exp            go to state 59
    literal        go to state 41
    function_call  go to state 42


State 52

   20 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   22 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 60
    _AROP       shift, and go to state 51


State 53

   19 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 19 (compound_statement)


State 54

   34 if_statement: if_part _ELSE statement .

    $default  reduce using rule 34 (if_statement)


State 55

   36 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    num_exp        go to state 61
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42


State 56

   35 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 22
    _RETURN    shift, and go to state 23
    _ID        shift, and go to state 24
    _LBRACKET  shift, and go to state 25

    statement             go to state 62
    compound_statement    go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    if_part               go to state 31
    return_statement      go to state 32


State 57

   30 function_call: _ID $@2 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 35
    _INT_NUMBER   shift, and go to state 36
    _UINT_NUMBER  shift, and go to state 37
    _LPAREN       shift, and go to state 38

    $default  reduce using rule 31 (argument)

    num_exp        go to state 63
    exp            go to state 40
    literal        go to state 41
    function_call  go to state 42
    argument       go to state 64


State 58

   26 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 26 (exp)


State 59

   22 num_exp: num_exp _AROP exp .

    $default  reduce using rule 22 (num_exp)


State 60

   20 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 20 (assignment_statement)


State 61

   22 num_exp: num_exp . _AROP exp
   36 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 51

    $default  reduce using rule 36 (rel_exp)


State 62

   35 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 35 (if_part)


State 63

   22 num_exp: num_exp . _AROP exp
   32 argument: num_exp .

    _AROP  shift, and go to state 51

    $default  reduce using rule 32 (argument)


State 64

   30 function_call: _ID $@2 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 65


State 65

   30 function_call: _ID $@2 _LPAREN argument _RPAREN .

    $default  reduce using rule 30 (function_call)
